--- a/Iteration 1/pubspec.yaml
+++ b/Iteration 1/pubspec.yaml
@@ -24,16 +24,24 @@ dependencies:
   flutter:
     sdk: flutter
   auto_size_text: ^3.0.0
-  # this allows handling of SvGs for Android,iOS and Web
-  #websafe_svg: ^1.1.4
-  #get: ^3.24.0
   cached_network_image: ^2.0.0
   cloud_firestore: ^0.13.3
   firebase_auth: ^0.15.2
   provider: ^3.2.0
+  google_sign_in: ^4.1.1
   shared_preferences: ^0.5.6+3
   random_string: ^2.0.1
-
+  # this allows handling of SvGs for Android,iOS and Web
+  #websafe_svg: ^1.1.4
+  #get: ^3.24.0
+  # cached_network_image: ^2.0.0
+  # cloud_firestore: ^0.17.0-1.0.nullsafety.0
+  # firebase_auth: ^0.21.0-nullsafety.0
+  # provider: ^3.2.0
+  # shared_preferences: ^0.5.6+3
+  # random_string: ^2.0.1
+  # firebase_core: ^0.8.0-nullsafety.1
+  # firebase_analytics: ^5.0.2
 
 
 
