Added ability to have multiple questions in a quiz

--- a/Iteration 1/.vscode/launch.json
+++ b/Iteration 1/.vscode/launch.json
@@ -7,7 +7,8 @@
         {
             "name": "Iteration 1",
             "request": "launch",
-            "type": "dart"
+            "type": "dart",
+            "args": ["--no-sound-null-safety"]
         },
         {
             "name": "Iteration 1 (profile mode)",
