--- a/Iteration 1/pubspec.yaml
+++ b/Iteration 1/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   google_sign_in: ^4.1.1
   shared_preferences: ^0.5.6+3
   random_string: ^2.0.1
-  #persistent_bottom_nav_bar: ^4.0.2
+  persistent_bottom_nav_bar: ^4.0.2
   custom_navigator: ^0.3.0
   # this allows handling of SvGs for Android,iOS and Web
   #websafe_svg: ^1.1.4
