--- a/Iteration 1/pubspec.yaml
+++ b/Iteration 1/pubspec.yaml
@@ -67,8 +67,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  # - lib/assets
+  assets:
+   - lib/assets/
+  #- lib/assets/profile_screen_bg.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
