--- a/Iteration 1/pubspec.yaml
+++ b/Iteration 1/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   persistent_bottom_nav_bar: ^4.0.2
   custom_navigator: ^0.3.0
   toggle_switch: ^1.4.0  # this allows handling of SvGs for Android,iOS and Web
+  walkthrough: ^0.0.3
   #websafe_svg: ^1.1.4
   #get: ^3.24.0
   # cached_network_image: ^2.0.0
